[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Core/Ability/ability.gd" type="Script" id=1]
[ext_resource path="res://assets/Core/Ability/Range/line_ability_range.gd" type="Script" id=2]
[ext_resource path="res://assets/Core/Ability/Area/full_ability_area.gd" type="Script" id=3]
[ext_resource path="res://assets/Core/Ability/Effect/damage_ability_effect.gd" type="Script" id=5]
[ext_resource path="res://assets/Core/Ability/HitRate/hit_rate.gd" type="Script" id=6]
[ext_resource path="res://assets/Core/Ability/Targets/default_ability_effect_target.gd" type="Script" id=7]

[node name="Attack" type="Node"]
script = ExtResource( 1 )

[node name="AbilityRange" type="Node" parent="."]
script = ExtResource( 2 )
horizontal = 1
vertical = 2

[node name="AbilityArea" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Effects" type="Node" parent="."]

[node name="DamageAbilityEffect" type="Node" parent="Effects"]
script = ExtResource( 5 )

[node name="HitRate" type="Node" parent="Effects/DamageAbilityEffect"]
script = ExtResource( 6 )

[node name="EffectTarget" type="Node" parent="Effects/DamageAbilityEffect"]
script = ExtResource( 7 )

[connection signal="effect_hit" from="Effects/DamageAbilityEffect" to="." method="on_hit"]
[connection signal="effect_missed" from="Effects/DamageAbilityEffect" to="." method="on_miss"]
